# Skillbox-C

./: CMakeLists.txt  diagram.json  main.cpp
hw/: CMakeLists.txt  setup.py  test_vector.py
hw/src/: Vector3D.cpp  Vector3D.h  main.cpp
hw_5.7/: CMakeLists.txt
hw_5.7/include/: Car.h
hw_5.7/src/: main.cpp
hw_6.5/: CMakeLists.txt
hw_6.5/include/: Matrix.h
hw_6.5/src/: Matrix.cpp  main.cpp
hw_7.6_shared/exe/: CMakeLists.txt  main.cpp
hw_7.6_shared/lib/: CMakeLists.txt  c_api.cpp  c_api.h  matrix.cpp  matrix.h
hw_8.8/: CMakeLists.txt  aerial-view-plants-rocks_1308-31916.avif  main.cpp  snake.cpp  snake.h
hw_9.7/: CMakeLists.txt  Vector3D.cpp  Vector3D.h  main.cpp  task.txt
project4.8/: diagram.json  main.cpp
